<resources>
    <string name="app_name">PoliLife</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="drawer_open">Drawer Opened</string>
    <string name="drawer_close">Drawer Closed</string>
    <string name="clear"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="availability">Available from</string>
    <string name="cost">Cost</string>
    <string name="location">Location</string>
    <string name="unspecified">Unspecified</string>
    <string name="property_type">Type of property</string>
    <string name="contract_type">Type of contract</string>
    <string name="rent">Rent</string>
    <string name="sale">Sale</string>
    <string name="studio">Studio flat</string>
    <string name="apartment">Apartment</string>
    <string name="loft">Loft</string>
    <string name="attic">Attic</string>
    <string name="within">Within</string>
    <string name="search_by_tag">Search by tag: </string>
    <string name="list_search_hint">Search by title</string>
    <string name="map_search_hint">Search near address</string>
    <string name="date">Date</string>
    <string name="sizem2">Size</string>
    <string name="price">Price</string>
    <string name="news">News</string>
    <string name="search_positions">Search for jobs</string>
    <string name="savedPos">Favorite jobs</string>
    <string name="search_companies">Search for companies</string>
    <string name="savedComp">Favorite companies</string>
    <string name="profile">Profile</string>
    <string name="applied">Applied</string>
    <string name="didactics">Didactics</string>
    <string name="noticeboard">Notice board</string>
    <string name="placement">Job placement</string>
    <string name="chat">Chat</string>
    <string name="all_notices">All notices</string>
    <string name="my_notices">My notices</string>
    <string name="fav_students">Favourite Students</string>
    <string name="comp_positions">My jobs</string>
    <string name="search_students">Search for students</string>
    <string name="group_name_empty">Group name is empty</string>
    <string name="group_name_hint">Type group name here</string>
    <string name="job_contract_hint">Select type of contract</string>
    <string name="job_degree_hint">Select level of study</string>
    <string name="username_text">Username</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="login_text">LOG IN</string>
    <string name="signup_text">SIGN UP</string>
    <string name="logout">Log out</string>
    <string name="userselector_text">user</string>
    <string name="studentbutton_text">Student</string>
    <string name="companybutton_text">Company</string>
    <string name="register_text">register</string>
    <string name="firstname_text">First Name</string>
    <string name="lastname_text">Last Name</string>
    <string name="country_text">Select Country</string>
    <string name="city_text">City</string>
    <string name="add">New</string>
    <string name="remove">Delete</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string-array name="career_arrays">
        <item>Select Career</item>
        <item>Bachelor</item>
        <item>Degree</item>
        <item>Master</item>
        <item>PhD</item>
    </string-array>
    <string-array name="required_career_arrays">
        <item>Bachelor degree</item>
        <item>Master degree</item>
        <item>PhD</item>
    </string-array>
    <string-array name="languages_arrays">
        <item>Select Language</item>
        <item>Italian</item>
        <item>English</item>
    </string-array>
    <string-array name="country_arrays">
        <item>Select Country</item>
        <item>Italy</item>
        <item>Malaysia</item>
        <item>Uzbekistan</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
        <item>Portugal</item>
    </string-array>
    <string-array name="types_of_contract">
        <item>FULL_TIME</item>
        <item>PART_TIME</item>
        <item>INTERNSHIP</item>
        <item>TEMPORARY</item>
        <item>OTHER</item>
    </string-array>
    <string-array name="type_arrays">
        <item>Course</item>
        <item>Media</item>
        <item>Sales</item>
        <item>Recruitment</item>
        <item>Social care</item>
        <item>Environment</item>
    </string-array>
    <string-array name="gender_arrays">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="department_arrays">
        <item>Select Department</item>
        <item>ICT</item>
        <item>Management</item>
    </string-array>
    <string name="dateofb_text">Date of Birth (DD/MM/YYYY)</string>
    <string name="ssn_text">Social Security Number</string>
    <string name="phone_text">Phone Number</string>
    <string name="address_text">Address</string>
    <string name="gender_text">Gender</string>
    <string name="nation_text">Nationality</string>
    <string name="aboutme_text">About Me</string>
    <string name="skills_text">Skills</string>
    <string name="linksto_text">Links to Projects/Works</string>
    <string name="career_text">University Career</string>
    <string name="hobbies_text">Hobbies</string>
    <string name="available_text">Available Period</string>
    <string name="uploadresume_text">Upload Resume</string>
    <string name="addphoto_text">Add Photo</string>
    <string name="update_button_text">UPDATE</string>
    <string name="skip_button_text">SKIP</string>
    <string name="comname_text">Company Name</string>
    <string name="contacname_text">Contact Name</string>
    <string name="faxnumber_text">Fax Number</string>
    <string name="webpage_text">Web Page</string>
    <string name="workersn_text">Number of Workers</string>
    <string name="aboutcompany_text">About Company</string>
    <string name="missions_text">Missions</string>
    <string name="fields_text">Fields of Work</string>
    <string name="awards_text">Awards</string>
    <string name="addlogo_text">Add Logo</string>
    <string name="title_activity_signup">signup</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">login</string>
    <string name="title_activity_signupselect">signupselect</string>
    <string name="title_activity_reg_c_1">reg_c_1</string>
    <string name="title_activity_temp_profile_page">temp_profile_page</string>
    <string name="contacts">Contacts</string>
    <string name="info">Info</string>
    <string name="infoStudent">Personal Info</string>
    <string name="general_info">General info</string>
    <string name="details">Details</string>
    <string name="photos">Photos</string>
    <string name="tags">Related Tags</string>
    <string name="empty_tag">Empty tag. Please type a valid tag</string>
    <string name="infoPosition">Information</string>
    <string name="descriptionPosition">Description</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_company_main">CompanyMainActivity</string>
    <string name="title_activity_add_details">addDetails</string>
    <string name="title_activity_add_position">addPosition</string>
    <string name="title_activity_info_company">InfoCompanyActivity</string>
    <string name="title_activity_student_main">StudentMainActivity</string>
    <string name="title_activity_student_position">PositionMainActivity</string>
    <string name="studentProfileInsideCompany">PositionMainActivity</string>
    <string name="more_button_text">More</string>
    <string name="description">Description</string>
    <string name="done">done</string>
    <string name="about_company">About Company</string>
    <string name="filds_of_work">Filds of Work</string>
    <string name="mission">Mission</string>
    <string name="title_activity_student_favorites">StudentFavoritesActivity</string>
    <string name="title_activity_company_student_search">CompanyStudentSearchActivity</string>
    <string name="title_activity_student_position_search">StudentPositionSearchActivity</string>
    <string name="title_activity_student_company_search">StudentCompanySearchActivity</string>
    <string name="title_add_home_notice">Create your home notice</string>
    <string name="title_add_book_notice">Create your book notice</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="hour1">8:30</string>
    <string name="hour2">9:30</string>
    <string name="hour3">10:30</string>
    <string name="hour4">11:30</string>
    <string name="hour5">12:30</string>
    <string name="hour6">13:30</string>
    <string name="hour7">14:30</string>
    <string name="hour8">15:30</string>
    <string name="hour9">16:30</string>
    <string name="hour10">17:30</string>
    <string name="hour11">18:30</string>
    <string name="room">Classroom</string>
    <string name="menu">Context Menu</string>
    <string name="clear_text">Clear text</string>
    <string name="course_details_title">Course details</string>
    <string name="room_details_title">Classroom details</string>
    <string name="title_activity_details">Details</string>
    <string name="action_search">Search</string>
    <string name="title_activity_search">Search</string>
    <string name="search">Search</string>
    <string name="professor_hint">Teacher name or a part of it</string>
    <string name="course">Course name or a part of it</string>
    <string name="noResult">No results found</string>
    <string name="exportTitle">Export to Google Calendar</string>
    <string name="emptyResult">Sorry, you have no events to export</string>
    <string name="noAccount">No Google accounts found</string>
    <string name="confirmExport">Are you sure?</string>
    <string name="title_activity_classroom_details">Classrooms</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="professors">Professors</string>
    <string name="classrooms">Classrooms</string>
    <string name="timetable">Timetable</string>
    <string name="books">Books and notes ads</string>
    <string name="homes">Houses ads</string>
    <string name="homes_subtitle">Take a look to ads on houses for rent</string>
    <string name="books_subtitle">Find books you are interested in</string>
    <string name="timetable_subtitle">Take a look to daily and weekly timetable</string>
    <string name="professors_subtitle">Find your professors and their related information</string>
    <string name="classrooms_subtitle">Find classrooms by name and discover their job</string>
    <string name="no_title">No title</string>
    <string name="no_location">No location</string>
    <string name="no_available_from">No start date</string>
    <string name="no_phone">No phone number</string>
    <string name="no_mail">No e-mail</string>
    <string name="no_name">No name</string>
    <string name="no_dob">No date of birth</string>
    <string name="no_address">No address</string>
    <string name="no_city">No city</string>
    <string name="no_country">No country</string>
    <string name="no_start_date">No start date</string>
    <string name="no_about">No details</string>
    <string name="no_web_page">No web page</string>
</resources>