<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="it.polito.mad.polilife.signup.SignUpPagerAdapter$Page2Fragment">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <EditText
            android:id="@+id/username_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:text="@string/clear"
            android:hint="@string/username_text" />

        <EditText
            android:id="@+id/studentregister_password_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/username_editText"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:text="@string/clear"
            android:hint="@string/password_text"
            android:inputType="textPassword" />
        <EditText
            android:id="@+id/studentregister_email_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/studentregister_password_editText"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:text="@string/clear"
            android:hint="@string/email_text" />

        <Button
            android:id="@+id/register_student_signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:text="@string/signup_text"
            android:layout_below="@+id/studentregister_email_editText" />
    </RelativeLayout>


</RelativeLayout>